# gameboost

./: Agreements.md  Algorithm.h  Box.h  CMakeLists.txt  CodeStyle.md  GameBoost.md  GameBoostEN.md  MathCore.cpp  MathCore.h  Matrix.h  ProjectHome.md  PtrArrayConst.h  Quaternion.inl  Ray.h  Rect.h  Vector.h  bbox.cpp  bbox.h  bsphere.h  cmake_generate_msvc_x64.bat  defines.h  deplibs.cmake  distances.h  matrix.h  matrix4x4fpu_impl.h  matrix4x4simd_impl.h  memoryarray.h  pmath.h  quad.h  quaternion.h  test_memoryquadarray.cpp  vector.h  vector2simd_impl.h  vector2simd_intrinsics.h  vector3fpu_impl.h  vector3simd_impl.h  vector4fpu_impl.h  vector4simd_impl.h  vector_pointers.h  windows_settings.cmake
examples/font/: CMakeLists.txt  main.cpp
examples/mt/: CMakeLists.txt
gb/: CMakeLists.txt  Config.h  d3d9pch.h  macro.h  pch.h
gb/audio/: abstract.h
gb/base/: Atlas.cpp  Atlas.h  Atomic.h  AutoInjection.h  Camera.h  CommonLog.cpp  CommonLog.h  Constants.cpp  Constants.h  Debug.h  FPSCounter.cpp  FPSCounter.h  Factory.h  Guid.h  IRefCountable.h  Logger.cpp  Logger.h  OnDeleteSignalingObject.h  Point.h  Rectangle.h  SimpleLog.cpp  SimpleLog.h  String.h  TailedType.h  Timer.cpp  Timer.h  Types.h  Variable.h  VariableContainer.cpp  VariableContainer.h  VariableUpdater.h  Win32Atomic.inl  abstract.h  alignedMalloc.cpp  alignedMalloc.h  base.h  ini.cpp  ini.h  nullptr.h  singleton.h  (+1 more)
gb/clipboard/: clipboard.cpp
gb/color/: ObjectColotType_e.h  color.h  color3.cpp  color3f.h  color4.cpp  color4.h  color_def.h  color_functions.h  color_integer.h
gb/containers/: IResource.cpp  Image.cpp  Image.h  Image2d.cpp  Image2d.h  Mesh.cpp  Mesh.h  PixelFormat.cpp  PixelFormat.h  Texture2D.cpp  Texture2D.h  colorConvert.h  colorConvert.lua
gb/deplib/: README.txt
gb/devhelp/: VariableMonHandler.h  devcamera.cpp  devcamera.h
gb/dialog/: dialog.h
gb/engineBlocks/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  CacheBase.h  CameraInput.cpp  CameraInput.h  EventTranslator.cpp  GameApplication.h  InputBase.h  InputHandlerMap.h  LRUCache.h  SkyBox.cpp  StringFlyweight.h
gb/fmath/: EulerAngles.h  FloatContext.h  GeometryContext.cpp  GeometryContext.h  RelatCoord.h  axiesangle.h  cilinder.h  circle.h  context.cpp  context.h  empty.h  euler_angles.h  eyedata.h  float_context_type_e.cpp  fmath.h  fmath_forward_decl.h  frustum.h  geom2d.cpp  geom2d.h  geom3d.cpp  geom3d.h  geometry_context.cpp  line2d.h  line3d.h  matrices.cpp  matrices.h  matrix.h  matrix44.h  matrix4x4_context_type_e.h  matrix_quad.hpp  matrix_stack.h  oobb.h  plane.h  point2.h  proj.cpp  proj.h  quaternion.cpp  quaternion.h  ray3d.h  scalar.cpp  (+13 more)
gb/fs/: FileSystem.h  Helpers.cpp  Helpers.h  LocalFS.cpp  LocalFS.h  SeekType.h  Stream.h
gb/graphics/: Buffer.h  Cube.cpp  Device.cpp  Device.h  Fog.h  Font.h  FontFreeType.cpp  FontFreeType.h  Layout.h  Quad.cpp  RenderTarget.h  Shader.h  ShaderPreprocessor.cpp  ShaderProgram.h  Sprite.h  Teapot.cpp  Teapot.h  Texture.h  TriangleMesh.h  Types.h  Uniform.h  UniformServer.h  graph_api.cpp  render_helper.cpp  render_helper.h
gb/i18n/: I18n.cpp  I18n.h  IntlString.cpp  IntlString.h  Japanese.cpp  Japanese.h  RomanicGermanic.cpp  RomanicGermanic.inl.h
gb/io/: DDSParser.cpp  DDSParser.h  FileStream.cpp  FileStream.h  IStream.h  MemoryStream.cpp  MemoryStream.h
gb/loaders/: CMakeLists.txt
gb/logging/: Logger.cpp
gb/makecppcode/: makecppcode.cpp  makecppcode2.cpp
gb/math/: BBox.h  Camera.h  Frustum.cpp  Frustum.h  Plane.h  Rect.h  base.cpp  base.h  forw_decl.h  geom2d.cpp  geom2d.h  geom3d.cpp  geom3d.h  kdTree.h  math.h  proj.h  scalar.cpp  scalar.h  vector.h
gb/mt/: Job.cpp  Job.h  JobScheduler.cpp  JobScheduler.h  Resource.cpp  Resource.h  ThreadPolicy.cpp  ThreadPolicy.h  syncPrimitives.h
gb/rand/: mt.h  rand.cpp
gb/resource/: AsyncLoader.h  CMakeLists.txt  LRUCache.h  Resource.cpp  Resource.h  ResourceBase.cpp  ResourceBase.h
gb/rtti/: rtti.h
gb/shaders/: ShaderPreprocessor.cpp  ShaderPreprocessor.h
gb/str/: CMakeLists.txt  KsDefines.h  KsString.cpp  KsString.h  KsUtils.cpp  KsUtils.h  String.cpp  String.h  UnicodeHelpers.h  formater.cpp  formater.h
gb/system/: Path.cpp  Path_linux.cpp  Path_win32.cpp  console.h  filefunc.cpp  path_linux.cpp  path_win32.cpp  winappl.h
gb/t/: Any.h  clamp.h  errorstr.h  func.h  rect.h  templ.h
gb/terrain/: CMakeLists.txt  ElevationData.h  IndexBuffer.cpp  IndexBuffer.h
gb/util/: SourceInit.cpp  SourceInit.h  util.cpp  util.h
gb/windowSubsystem/: WindowManager.h
gb/window_subsystem/: Input.h  KeyCodes.h  Window.h  WindowManager.h
glew/: CMakeLists.txt
lib/baseApp/: CMakeLists.txt
lib/mt/: CMakeLists.txt  main.cpp
lib/shaders/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Config.h  pch.h  precompiled_headers.h
src/base/: Atomic.h  CommonLog.cpp  CommonLog.h  IRefCountable.h  LinuxTimer.cpp  SimpleLog.cpp  SimpleLog.h  String.cpp  String.h  Timer.cpp  Timer.h  Win32Timer.cpp  singleton.h
src/io/: DDSParser.h  FileHD.h  FileRAM.cpp  FileRAM.h  FileStream.cpp  FileStream.h  IFile.h  MemoryStream.cpp  MemoryStream.h
src/math/: vector.h
src/mt/: Job.cpp  Job.h  JobScheduler.h
src/system/: path.cpp  path.h
test/: CMakeLists.txt  cmake_generate.bat  main.cpp  test_Random.cpp  test_String.cpp  test_makecppcode.cpp  test_path.cpp  test_pch.cpp  test_pch.h
test/base/: test_ini.cpp
test/color/: test0.cpp
test/math/: test_matrix_4x4.cpp  test_plane.cpp  test_quaternion.cpp  test_vec3.cpp  test_vec4.cpp
test/rand/: test0.cpp
test/str/: sample_save.txt  test_formater.cpp  test_ksstring.cpp
trunk/: CMakeLists.txt  README.txt  cmake_generate_msvc_x86.bat
trunk/data/: arrow_z_0_1.mesh  config.txt  cube.mesh  quads_array.mesh
trunk/doc/: !ПРОЧИТАЙ.txt  Doxyfile.doxy  Doxyfile_fmath.doxy  Doxyfile_gbgraph_d3d9_only.doxy  Doxyfile_gbmath_only.doxy
trunk/examples/: !ПРОЧИТАЙ.txt  CMakeLists.txt  sample.cpp
trunk/gb/: CMakeLists.txt  Config.h  d3d9pch.cpp  d3d9pch.h  macro.h  pch.h
trunk/lib/: CMakeLists.txt
trunk/shaders/: test.vert
trunk/src/: CMakeLists.txt  Config.h  pch.h  (+2 more)
(+848 files in other folders)
